--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "bootstrap": "^5.1.1",
     "bulma": "^0.9.3",
     "cors": "^2.8.5",
+    "date-fns": "^2.24.0",
     "express": "^4.17.1",
     "firebase-admin": "^9.11.1",
     "nodemon": "^2.0.12",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "uuid": "^8.3.2",
     "web-vitals": "^1.1.2"
